# proj-riot

./: .gitignore  PROJETOS.md  README.md  conda_environment.txt  pyproject.toml  read_excel_options.py  requirements.txt  uv-env
AI/: README.md
AI/models/LLMs/gemini/: README.md  install.sh  prompt_classificacao.yaml  prompts.yaml  riot_gemini.py  run.sh
AI/models/Segment/SAM3/: README.md  sam3_video_segment.py
AI/models/yolo_train_infer/pose_estimation/: train_yolo.py
AI/models/yolo_train_infer/tracking/: Tracking_Video_Comparacao_Algoritmos.ipynb
app/: DEPLOY.md  DEPLOYMENT.md  NGINX_SETUP.md  PRODUCTION_DEPLOY.md  README.md  deploy.sh  start.sh  stop.sh
app/backend/: README.md  animal-history.json  data_manager.py  main.py  models.py  requirements.txt
app/frontend/: .env.example  App.tsx  README.md  config.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
app/frontend/components/: AnimalDetailPanel.tsx  BottomNav.tsx  ChatPanel.tsx  HerdPanel.tsx  Icons.tsx  Login.tsx  MapPanel.tsx  SettingsPanel.tsx  StatsPanel.tsx
app/frontend/contexts/: GeminiConfigContext.tsx
app/frontend/hooks/: useAnimalData.ts
app/frontend/services/: geminiService.ts
dashboard/: README.md  app.py  app_riot.py  mapa.py  requirements.txt  vacas_jundai.html
esp/sending_data/: .gitignore  CMakeLists.txt
esp/sending_data/main/: CMakeLists.txt  env_config_example.h  sending_data_main.c
models/LLMs/gemini/: requirements.txt  run.sh
models/LLMs/gemini/src/: __init__.py  (+2 more)
models/yolo_train_infer/pose_estimation/: inf_yolo.py
models/yolo_train_infer/tracking/: Tracking_Video_Modelo_Treinado.ipynb
website/simple/: main.html  riot.css
(+42 files in other folders)
